--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <span></span>
+        <input id="gorod" placeholder="City"></input>
         <span></span>
         <span></span>
     </header>
@@ -19,8 +19,8 @@
 
             </span>
             <div class="glavnoeInfo">
-                <p>City</p>
-                <p>Temperature</p>
+                <p id="town">City</p>
+                <p id="tempa">Temperature</p>
             </div>
         </div>
         <div class="nedelya"></div>
