--- a/index.html
+++ b/index.html
@@ -15,15 +15,37 @@
     </header>
     <main>
         <div class="glavnoe">
-            <span class="pogodaImg">
-
+            <p id="h2">Time</p>
+            <span class="pogodaImg" id="icon">
             </span>
             <div class="glavnoeInfo">
                 <p id="town">City</p>
                 <p id="tempa">Temperature</p>
             </div>
         </div>
-        <div class="nedelya"></div>
+        <div class="nedelya" id="nedelya">
+            <div id="0"><p></p>
+                <span id="icon0"></span>
+            </div>
+            <div id="1"><p></p>
+                <span id="icon1"></span>
+            </div>
+            <div id="2"><p></p>
+                <span id="icon2"></span>
+            </div>
+            <div id="3"><p></p>
+                <span id="icon3"></span>
+            </div>
+            <div id="4"><p></p>
+                <span id="icon4"></span>
+            </div>
+            <div id="5"><p></p>
+                <span id="icon5"></span>
+            </div>
+            <div id="6"><p></p>
+                <span id="icon6"></span>
+            </div>
+        </div>
     </main>
 </body>
 </html>
